// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditForm> renders a form with the "Change password" button 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="firstname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            First Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="eb99cea6-947b-4d1b-b33d-29960f5cf2fb"
              name="firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="lastname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Last Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="d3d92ce3-185e-42d6-b664-cf2a22da6925"
              name="lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="email"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Email address
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="8ad2f045-01d2-4b40-aca6-f61605d01c26"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="password"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Password
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 1;"
        >
          <span
            class="input"
          >
            <input
              autocomplete="current-password"
              class="input"
              id="f478813f-894e-4376-b408-de1a96830ad9"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <button
              type="button"
            >
              <span
                class="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="changePasswordButtonContainer"
    >
      <button
        class="changePasswordButton"
        classes="[object Object]"
        type="button"
      >
        <span>
          Change Password
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<EditForm> renders a form without the "Change password" button 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="firstname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            First Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="6b47468f-2198-464d-9b98-a800566e8813"
              name="firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="lastname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Last Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="8f27fd7f-1a68-4ca1-b657-188066b56fad"
              name="lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="email"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Email address
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="3e9e3cf9-15b3-4db4-825f-a62cf9434cfd"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="password"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Current Password
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 1;"
        >
          <span
            class="input"
          >
            <input
              autocomplete="current-password"
              class="input"
              id="d3410858-d025-4163-9276-105ca591a63e"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <button
              type="button"
            >
              <span
                class="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
    </div>
  </div>
  <div
    class="newPassword"
  >
    <div
      class="root"
    >
      <label>
        <span
          class="label"
        >
          New Password
        </span>
      </label>
      <span
        class="root"
        style="--iconsBefore: 0; --iconsAfter: 1;"
      >
        <span
          class="input"
        >
          <input
            class="input"
            id="3c9fbb5f-146e-4939-b587-c72d5bf8eb3e"
            name="newPassword"
            type="password"
            value=""
          />
        </span>
        <span
          class="before"
        />
        <span
          class="after"
        >
          <button
            type="button"
          >
            <span
              class="content"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p
        class="root"
      />
    </div>
  </div>
</DocumentFragment>
`;
